Issue #17487: Proposal: Add `rewrite` support for `errorprone.refasterrules`